set pool name to Hosted Ubuntu 1604

--- a/build.yml
+++ b/build.yml
@@ -1,5 +1,7 @@
-container: 
-  image: maven:latest
+pool:
+  vmImage: 'Hosted Ubuntu 1604'
+
+container: maven:latest
 
 steps:
 - script: mvn -B -DskipTests clean package
