--- a/build.yml
+++ b/build.yml
@@ -10,6 +10,10 @@ resources:
 
     image: maven:3-jdk-8
 
+  - container: dind
+    
+  image: docker:dind
+
 pool:
 
   name: Draft pool
@@ -53,6 +57,10 @@ steps:
     ArtifactName: 'drop'
 
     publishLocation: 'Container'
+
+container: dind
+
+steps:
 
 - task: Docker@2
 
