--- a/build.yml
+++ b/build.yml
@@ -10,9 +10,9 @@ resources:
 
     image: maven:3-jdk-8
 
-  - container: dind
+  # - container: dind
     
-    image: jeroenknoops/docker-docker-dind-bash:latest
+  #   image: docker:dind # cant be used due azure devops limitations
 
 jobs:
 
@@ -62,34 +62,47 @@ jobs:
 
       publishLocation: 'Container'
 
-- job: dockerBuildAndPublish
+- job: copyArtifactToDeployServer
   
-  pool:
+  steps:
+  
+  - task: CopyFilesOverSSH@0
+    inputs: 
+      sshEndpoint: 192.168.0.113
+      sourceFolder: '$(Build.ArtifactStagingDirectory)'
+      contents: '**/*.jar' 
+      targetFolder: /opt/release/
+      cleanTargetFolder: true 
+      overwrite: true 
 
-    name: Draft pool
+# - job: dockerBuildAndPublish
+  
+#   pool:
 
-  container: dind
+#     name: Draft pool
 
-  steps: 
+#   container: dind
+
+#   steps: 
     
-  - task: Docker@2
+#   - task: Docker@2
 
-    inputs:
+#     inputs:
     
-      command: login
+#       command: login
     
-      containerRegistry: foxDockerHubServiceConnection
+#       containerRegistry: foxDockerHubServiceConnection
 
-  - task: Docker@2
+#   - task: Docker@2
 
-    inputs:
+#     inputs:
 
-      command: buildAndPush
+#       command: buildAndPush
 
-      Dockerfile: ./Dockerfile
+#       Dockerfile: ./Dockerfile
 
-      buildContext: '$(Build.ArtifactStagingDirectory)'
+#       buildContext: '$(Build.ArtifactStagingDirectory)'
 
-      repository: foxlollato/java-maven-hw
+#       repository: foxlollato/java-maven-hw
 
-      tags: sometag1
+#       tags: sometag1
