--- a/build.yml
+++ b/build.yml
@@ -60,7 +60,7 @@ jobs:
 
       ArtifactName: 'drop'
 
-      publishLocation: 'Container'
+      publishLocation: 'FilePath'
 
 - job: copyArtifactToDeployServer
   
