--- a/build.yml
+++ b/build.yml
@@ -77,6 +77,9 @@ jobs:
       overwrite: true 
 
 - job: deployRelease
+  
+  steps:
+    
   - task: Bash@3
     inputs:
       targetType: 'inline'
