--- a/build.yml
+++ b/build.yml
@@ -1,7 +1,3 @@
-variables:
-  
-  artifactName: my-app-1.0-SNAPSHOT 
-
 trigger:
 
   - master
@@ -71,21 +67,12 @@ jobs:
     inputs: 
       sshEndpoint: deployServerSshServiceConnection
       sourceFolder: '$(Build.ArtifactStagingDirectory)'
-      contents: '$(artifactName).jar' 
+      contents: '*.jar' 
       targetFolder: /opt/release/
       cleanTargetFolder: false 
       overwrite: true 
 
-- job: deployRelease
-  
-  steps:
 
-  - task: Bash@3
-    inputs:
-      targetType: 'inline'
-      script: java -jar /opt/release/$(artifactName).jar
-
-  
 #  steps: 
   
 
